--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -306,12 +306,14 @@ button{
     color: #b71c1c;
 }
 .metas_andamento{
-    float: left;
+    /*float: left;*/
     width: 100%;
     background-image: url(../img/icons/ic_chevron_right_black_24dp.png);
     background-repeat: no-repeat;
     background-position: 97% center;
     padding: 3px 19px 0 0;
+    height: auto;
+    overflow: hidden;
 }
 .padding_t_54{
     padding-top: 54px;
@@ -333,10 +335,10 @@ button{
     width: 44%;
     float: left;
     font-family: 'Roboto-medium', sans-serif;
-    font-size: 1.2em;
+    font-size: 22px;
     font-weight: 500;
     line-height: 22px;
-    padding: 10px 0 10px 15px;
+    padding: 8px 0 8px 15px;
  
 }
 
@@ -344,7 +346,7 @@ button{
     padding: 0px 15px 0 0;
     text-align: right;
     width: 55%;
-    line-height: 90px;
+   /* line-height: 90px;*/
     float: right;
     clear: right;
     font-family: 'Roboto-Black', sans-serif;
@@ -1147,7 +1149,7 @@ ul#ulDetalhesMeta li{
 
 ul#listaProjetosDeMetas{
     margin:12px 0 0 0;
-    padding: 0;
+    padding: 15px;
     list-style-type: none;
 }
 
