ultima versao com ajuste por tamanho, voltando ao anterior

--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -346,7 +346,7 @@ button{
     padding: 0px 15px 0 0;
     text-align: right;
     width: 55%;
-   /* line-height: 90px;*/
+   /*k*/
     float: right;
     clear: right;
     font-family: 'Roboto-Black', sans-serif;
